# rendersphere

./: CMakeLists.txt  README.md
src/: light.hpp  main.cpp  renderer.cpp  renderer.h  scene.cpp  scene.h  scene.hpp  sphere.hpp  utils.hpp
tests/: simple_test.cpp
